...
        android:visibility="invisible"
        app:backgroundTint="@color/colorFab3"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="156dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/ic_store_mall_directory_white_24dp"
...
        android:visibility="invisible"
        app:backgroundTint="@color/colorFab1"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp"
...
