<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/enter_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"/>


    <EditText
        android:id="@+id/input_label_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/title"
        android:inputType="textAutoCorrect"
        android:imeOptions="actionDone"
        />

</LinearLayout>