<resources>
    <string name="app_name">Locate</string>
    <string name="title_activity_main">Locate</string>
    <string name="app_intro">IntroActivity</string>
    <string name="intro1desc">Locate works like an alarm clock. \nExcept it does not work with them time. \nIt Works with you location!</string>
    <string name="intro2desc">You can add reminders based on real locations..</string>
    <string name="intro3desc">Or choose from one of many points of interest!</string>

    <string name="title_activity_add_loc_rem">Add Location Reminder</string>
    <string name="title_activity_add_loc">Add Location Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="enter_title">Enter title:</string>
    <string name="title">title</string>
    <string name="permission_needed">We need the following permission(s):</string>
    <string name="Permission">Permissions Needed</string>
    <string name="OK">OK</string>
    <string name="empty_reminder_list_text">It seems you don\'t have any reminders!\nAdd one by pressing the plus-button</string>
    <string name="remind_later">Remind Later</string>
    <string name="dismiss">Dismiss</string>
    <string name="reminder_distance_default">1.6 km</string>
    <string name="description">Description</string>
</resources>
